[package]
description = "Parser combinator for `rust` language."
documentation = "https://docs.rs/parserc"
edition = "2024"
license = "MIT"
name = "parserc"
repository = "https://github.com/stylang/parserc"
version.workspace = true


[dependencies]
thiserror = "2.0.17"
sourcespan = { version = "^0.10", path = "../span" }
memchr = { version = "2.7.6", optional = true }
serde = { version = "1.0.228", optional = true }
parserc-derive = { path = "../derive" , version = "^0.10", optional = true }

[features]
default = ["serde","syntax","input"]
input = ["memchr"]
serde = ["dep:serde","serde/derive", "sourcespan/serde"]
syntax = ["parserc-derive"]
